# PhoenixQuant

./: .gitignore  AGENTS.md  BACKTEST_IMPROVEMENTS.md  BINANCE_DEMO_MODE.md  CLAUDE.md  FIX_SUMMARY.md  OPTIMIZATION_SUMMARY.md  README.md  TESTNET_GUIDE.md  TP_SL_OPTIMIZATION.md  TRADING_MODES.md  TRADING_STATS_FIX.md  analyze_pnl.py  analyze_testnet_data.py  backtest_analysis.py  backtest_engine.py  backtest_strategy.py  batch_backtest.py  debug_backtest.py  diagnose_trades.py  elastic_bot_userstream_preset.py  explain_pnl.py  generate_optimization_report.py  improved_real_market_backtest.py  multi_asset_backtest.py  optimization_analysis.md  profile_backtest.py  pyproject.toml  quick_start.sh  quick_test_backtest.py  real_market_backtest.py  run_backtest.py  run_backtest_ds.py  run_live_trading.py  test_chart_fix.py  view_backtest_details.py  visualize_backtest.py  visualize_comparison.py
configs/: elastic_dip.yaml  future_demo.yaml  live_eth.yaml  live_eth_both.yaml  live_eth_short.yaml  live_template.yaml  long_term_bnb.yaml  long_term_btc.yaml  long_term_doge.yaml  long_term_eth.yaml  long_term_xrp.yaml  opt_balanced.yaml  opt_comprehensive.yaml  opt_layer_balance.yaml  opt_risk_control.yaml  opt_signal_quality.yaml  spot_demo.yaml  spot_testnet.yaml  testnet_example.yaml
data/: btcusdt_1m.csv
phoenix_quant/: __init__.py  config.py  live.py
phoenix_quant/backtest/: __init__.py  analyzer.py  data.py  engine.py  runner.py
phoenix_quant/strategies/: __init__.py  elastic_dip.py
src/phoenixquant/: __init__.py  app.py  bot.py  config.py  feeds.py  indicators.py  (+2 more)
