[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "phoenixquant"
version = "0.1.0"
description = "Elastic Dip Bot for Binance Futures"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "PhoenixQuant"}]
dependencies = [
    "ccxt",
    "websockets",
    "numpy",
]

[project.scripts]
phoenixquant = "phoenixquant.main:main"

