[project]
name = "phoenixquant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.5.14",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "pyyaml>=6.0.2",
    "websockets>=15.0.1",
]
